fixed cap and made it clickable, made the page go left when on desktop view and be normal on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,29 @@ body{
 .content-b{
     position:relative;
     top:46px;
+    left: 228px;
+    margin-right: 228px;
 }
+
+::-webkit-scrollbar {
+    display: none;
+  }
+  
+
+  
+  * {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 
 @media screen and (max-width: 500px) {
     
+    .content-b{
+        position: relative;
+        left: 0px;
+        margin-right: 0px;
+    }
 
     .content-b-sidemenu-open{
         opacity:0.3;
